   createFigure setting is set to True.

11 November 2017
 - Implemented a FWHM determination, that is included in the plots of each individual peak
   of the PDF files.
 - FWHM values will also be printed to the summary if the Peak Quality Criteria are selected
   in the Output Options of Batch Process.
 - Implemented a retention time residual, that is printed to the summary if the Peak Quality
   Criteria are selected in the Output Options of Batch Process.

16 November 2017
 - Implemented automatic integration window border determination using either sigma or FWHM.
 - Two new settings have been added to the settings window, namely 'Peak Detection Edge Method'
   and 'Sigma Value'. The first specifies if the border is the FWHM or based on a user
   specified Sigma value. The latter specifies what Sigma value should be used, if the first
   is set to Sigma.

24 November 2017
 - Fixed a bug that caused a peak to be shifted if there were more than 2 peaks overlapping.
   This was caused by the i['Peak'] value no longer being in the middle of i['Data'] after
   the border was changed. The fix was to always compare to relevant border of i['Data'] to
   i['Peak'] rather than the two opposite ends of i['Data'].
 - Applied the above mentioned fix on the generated peak list as well.

4 December 2017
 - Restructured batchQuantifyChrom function in batchFunctions.py to enable better try and 
   except usage. This restructuring solved several issues that were plagueing HappyTools.
 - Fixed potential ZeroDivisionErrors that could occur in the batchQuantifyChrom function.
 - FitPack errors deriving from trying to fit a function on too little datapoints can no
   longer occur.

12 December 2017
 - Implemented basic calibrant determination to peakDetection function.
 - Sigma returned by curve_fit & gaussFunction could be negative, leading to some peaks
   not showing up in peakDetection. This was fixed by always taking the absolute value   
   of the sigma.