@@ -31,7 +31,6 @@ import functions
 
 # Innate variables
 version = "0.0.2"
-build = "171212a"
 
 # General variables
 output = "summary.results"
